# anti-analysis

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/win/: debug.rs  mod.rs  sandbox.rs  util.rs  vm.rs
tests/: mod.rs  win_test.rs
