[package]
name = "anti-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Threading",
    "Win32_System_RemoteDesktop",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_UI",
    "Win32_UI_Shell",
    "Win32_Storage",
    "Win32_Storage_FileSystem"
]
